build(release)!: release 1.6.0 (#102)